# MicroHTTP

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.lib  httpc.pc.in  readme.md
docs/: main.md
examples/: request_api_example  request_api_example.c  simple_server.c
includes/: error_handling.h  http.h  httpc.h  logger.h  router.h  routes.h  server.h
includes/api/: http.h  httpc.h  response.h  response_helpers.h
includes/constants/: constants.h  macros.h
includes/core/: config.h  logger.h  methods.h  request_parser.h  router.h  server.h  utils.h
includes/core/server/: server.h
includes/handlers/: methods.h
includes/json/: json_utils.h
includes/server/: server.h
includes/structs/: connection.h  enums.h  httpc.h  route.h
srcs/: http.c  httpc_lib.c  sample_main.c
srcs/api/: httpc_lib.c  response.c  response_helpers.c
srcs/core/: config.c  error_handling.c  request_parser.c  router.c  server.c  user_logger.c  utils.c
srcs/core/errors/: error_handling.c
srcs/core/handlers/: handler.c
srcs/core/handlers/methods/: get_handler.c  post_handler.c  unsupported_handler.c
srcs/core/handlers/threads/: client_theads.c
srcs/core/logger/: user_logger.c
srcs/core/router/: router.c
srcs/core/server/: server.c
srcs/errors/: error_handling.c
srcs/handlers/: handler.c
srcs/handlers/methods/: get_handler.c  post_handler.c
srcs/handlers/threads/: client_theads.c
srcs/json/: json_utils.c
srcs/logger/: main_logger.c  user_logger.c
srcs/logger/messages/: http_logger.c  welcome.c
srcs/router/: router.c
srcs/routes/: routes.c
srcs/server/: server.c
srcs/utils/: welcome.c
tests/: Makefile  greatest.h  test_httpc  test_httpc.c
